src/css/style.css
/* ... */
#tabs .time span {
    font-weight: 400;
    color: grey;
}

#tabs .weather {
    box-shadow: inset 1px 0 rgba(255, 255, 255, .1);
}

#tabs .weather p[temperature] {
    margin: 0 1em 0 1em;
    color: grey;
}

#tabs i {
    font-size: 21px !important;
}

#tabs i[sunny] { color: #fd6697; }

#tabs i[cloudy] { color: #88d8d8; }

#panels .links {
    right: 0;
    width: 70%;
    height: 100%;
    background: #18181d;
    padding: 5%;
    flex-wrap: wrap;
}

#panels > ul:first-child .links a {
    color: #bfbfbf;
    text-decoration: none;
    font: 700 18px 'Roboto', sans-serif;
    transition: all .2s;
    display: inline-block;
    padding: .4em .7em;
    background: rgba(0, 0, 0, .35);
    box-shadow: 0 3px rgba(0, 0, 0, 0.25), 0 5px 10px rgba(0, 0, 0, .5);
    border-radius: 2px;
    margin-bottom: .7em;
}

#panels > ul:first-child .links a:not(:last-child) { margin-right: .3em }

#panels > ul:first-child .links a:hover {
    transform: scale(1.2);
    box-shadow: 0 0 rgba(0, 0, 0, 0.25), 0 0 0 rgba(0, 0, 0, .5), 0 -4px 5px rgba(0, 0, 0, .1);
    color: #fff;
}

#panels ul::after {
    content: attr(class);
    position: absolute;
    display: flex;
    text-transform: uppercase;
    overflow-wrap: break-word;
    width: 25px;
    height: 250px;
    padding: 1em;
    margin: auto;
    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 1);
    left: calc(15% - 42.5px);
    bottom: 0;
    top: 0;
    background: rgba(0, 0, 0, .4);
    color: #fff;
    letter-spacing: 1px;
    font: 100 30px 'Nunito', sans-serif;
    text-align: center;
    flex-wrap: wrap;
    word-break: break-all;
    align-items: center;
    mix-blend-mode: overlay;
}

#panels > ul:first-child .links li:not(:last-child) {
    box-shadow: 0 1px 0 rgba(255, 255, 255, .07);
    padding: 0 0 .5em 0;
    margin-bottom: 1.5em;
}

#panels > ul:first-child .links li h1 {
    color: #383838;
    font-size: 22px;
    margin-bottom: .5em;
    font-weight: 700;
    letter-spacing: 1px;
}

#panels > ul:not(:first-child) li {
    padding: .5em;
    /* display: inline; */
}

#panels > ul:not(:first-child) li a {
    color: grey;
    font: 700 16px 'Roboto', sans-serif;
    text-decoration: none;
    letter-spacing: 1px;
}

#panels > ul:not(:first-child) li a:hover {
    color: #fff;
}

#panels > ul:not(:first-child) li a:hover::before {
    display: inline;
}

#panels > ul:not(:first-child) li a::before {
    content: '> ';
    font-weight: 400;
    display: none;
}

.weather .edit {
    width: 100%;
    height: 100%;
    background: #1f1f1f;
    text-transform: uppercase;
    font: 600 11px 'Roboto', sans-serif;
    letter-spacing: 1px;
    color: #fff;
    border: 0;
    margin: 40px 0 0 0;
    cursor: pointer;
    transition: all .2s;
}

.widgets:hover .edit {
    margin: 0;
}

.weather-config {
    width: 100%;
    height: 100%;
    background: #1f1f1f;
    margin: -100% 0 0 0;
    transition: all .2s;
    z-index: 2;
}

.weather-config input[name="color"] {
    width: 100%;
    padding: .6em;
    border: 0;
    background: 0;
    box-shadow: inset 0 -2px #fff;
    font: 500 12px 'Roboto', sans-serif;
    color: #fff;
}

.weather-config.show {
    margin: 0;
}

#search {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, .8);
    z-index: 99;
    opacity: 0;
    visibility: hidden;
    top: -100%;
    transition: all .5s ease-in-out;
}

#search.active {
    top: 0;
    opacity: 1;
    visibility: visible;
}

#search div {
    position: relative;
    width: 80%;
}

#search input {
    border: 0;
    outline: 0;
    width: 100%;
    box-shadow: inset 0 -2px #737373;
    padding: .5em 0;
    background: none;
    font: 500 22px 'Roboto', sans-serif;
    letter-spacing: 1px;
    color: #fff;
}

#search input:focus {
    box-shadow: inset 0 -2px #fff;
}

#search input::selection {
    background: #000;
    color: #fff;
}

#search .close {
    background: 0;
    border: 0;
    outline: 0;
    color: #fff;
    position: absolute;
    right: 0;
    cursor: pointer;
    top: 15px;
}

#search .close:hover {
    filter: opacity(.5);
}

.search-engines {
    list-style: none;
    color: #7d7d7d;
    display: block;
    display: flex;
    top: 50px;
    left: 0;
    margin: 1em 0 0 0;
}

.search-engines li p {
    cursor: default;
    transition: all .2s;
    font-size: 12px;
    font-family: 'Roboto', sans-serif;
}

.search-engines li {
    margin: 0 1em 0 0;
}

.search-engines li.active {
    color: #fff;
    font-weight: 700;
}

